# strandal

./: .gitignore  Cargo.toml  README.md  default.nix
src/: icomb.rs  lambda.rs  main.rs  strandal.rs
src/icomb/: display.rs  heap.rs  net.rs  runtime.rs  store.rs
src/icomb/net/: cell.rs  equation.rs  term.rs  var.rs
src/strandal/: cell.rs  display.rs  equation.rs  net.rs  parser.rs  runtime.rs  stats.rs  store.rs  term.rs  var.rs
src/strandal/net/: cell.rs  equation.rs  term.rs  var.rs
