[package]
name = "strandal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.6"
tracing = "0.1"
tracing-subscriber = "0.3"
chumsky = { git = "https://github.com/zesterer/chumsky.git", tag = "1.0.0-alpha.0"}
